# airdroid

./: AGENTS.md  Cargo.toml  README.md  install.sh
src/: adb.rs  main.rs  scrcpy.rs  ui.rs
